# devisadhana

./: CMakeConfigForSadhana.txt  CMakeLists.txt  README.md  database_handler.cpp  main.cpp  ritual.csv  transcript.txt
documents/: ritual_maha_ganapati_caturvrtti_tarpanam.json  ritual_offering_totals.txt
includes/asr/: vosk_asr.hpp  whisper_asr.hpp
includes/audio/: audio_capture.hpp  audio_processor.hpp  vad.hpp
includes/definition/: definition.hpp
includes/phrase/: phrase_manager.hpp
includes/ritual/: display_manager.hpp  flow_manager.hpp  keyboard_handler.hpp
rituals/common/mantras/: ganapati_tarpanam.json
rituals/common/materials/: tarpanam_basic.json
rituals/common/procedures/: tarpanam_procedures.json
rituals/definitions/ganapati/: flow.json  maha_ganapati_caturvrtti_tarpanam.json
rituals/translations/en/: ganapati_tarpanam_en.json
src/: audio_input.cpp  audio_input.hpp  config.cpp  config.hpp  main.cpp  phrase_match.cpp  phrase_match.hpp  phrase_spec.cpp  phrase_spec.hpp  ring_buffer.hpp  rms.hpp  sqlite_logger.cpp  sqlite_logger.hpp  vad.cpp  vad.hpp
src/asr/: vosk_asr.cpp  whisper_asr.cpp
src/audio/: audio_capture.cpp  audio_processor.cpp  vad.cpp
src/definition/: definition.cpp
src/phrase/: phrase_manager.cpp
src/ritual/: flow_manager.cpp
